refactor(#36) : methods to destroy districts in bot call each other ; updated tests